* Program.cs: * Startup.cs: * Forecast.cs: * Location.cs: * ForecastHub.cs: * ForecastApiWrapper.cs: * IForecastApiWrapper.cs:
* BigDataAssigment.MonitoringApp.csproj: Refactoring - Move classes to
  relevant folders and small changes..

--- a/BigDataAssigment.MonitoringApp/BigDataAssigment.MonitoringApp.csproj
+++ b/BigDataAssigment.MonitoringApp/BigDataAssigment.MonitoringApp.csproj
@@ -20,5 +20,7 @@
     </ItemGroup>
     <ItemGroup>
       <Folder Include="SignalR\" />
+      <Folder Include="ForecastApiClient\" />
+      <Folder Include="Models\" />
     </ItemGroup>
 </Project>
